--- a/react-projects-master/20-dark-mode/setup/src/index.css
+++ b/react-projects-master/20-dark-mode/setup/src/index.css
@@ -4,11 +4,11 @@ Global Styles
 ===============
 */
 
-:root {
+/* :root {
   --clr-bcg: #fff;
   --clr-font: #282c35;
   --clr-primary: #d23669;
-}
+} */
 
 .dark-theme{
   --clr-bcg: #282c35;
